# tanssi

./: 703old_container_chain_template_simple_runtime.compact.compressed.wasm  704_container_chain_template_simple_runtime.compact.compressed.wasm  Cargo.toml  container_chain_template_simple_runtime.compact.compressed-801.wasm  container_chain_template_simple_runtime.compact.compressed-802.wasm  container_chain_template_simple_runtime.compact.compressed-903.wasm  rust-toolchain
container-chains/nodes/simple/src/: chain_spec.rs
container-chains/runtime-templates/simple/: Cargo.toml  rustc-ice-2024-10-09T20_56_21-2315414.txt
container-chains/runtime-templates/simple/src/: lib.rs
pallets/edge-connect/: Cargo.toml
pallets/edge-connect/src/: types.rs
pallets/faucet/: Cargo.toml
pallets/faucet/src/: lib.rs
pallets/payment/: Cargo.toml
pallets/status-aggregator/: Cargo.toml
pallets/task-management/: Cargo.toml
pallets/task-management/src/: lib.rs
pallets/zk-verifier/: Cargo.toml
pallets/zk-verifier/src/: mock.rs
primitives/cyborg/: Cargo.toml
primitives/cyborg/src/: lib.rs  oracle.rs  task.rs  worker.rs
runtime/dancebox/src/: lib.rs
runtime/flashbox/src/: lib.rs
