[package]
name = "pallet-edge-connect"
description = "Pallet for managing connected workers"
version = "0.1.0"
# authors.workspace = true
# repository.workspace = true
edition = "2021"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { workspace = true , default-features = false, features = [
	"derive",
] }
scale-info = { workspace = true , default-features = false, features = [
	"derive",
] }
pallet-timestamp = { workspace = true , default-features = false }

# cyborg-primitives = { workspace = true, default-features = false  }
cyborg-primitives = { path = "../../primitives/cyborg", default-features = false, version = "0.1.0" }
# frame deps
frame-benchmarking = { workspace = true , default-features = false, optional = true }
frame-support = { workspace = true , default-features = false }
frame-system = { workspace = true , default-features = false }

sp-std = { workspace = true , default-features = false }

[dev-dependencies]
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }

[features]
default = ["std"]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
std = [
	"parity-scale-codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
#	"cyborg-primitives/std",
]
try-runtime = ["frame-support/try-runtime", "frame-system/try-runtime"]
