[package]
name = "cyborg-primitives"
description = "cyborg primitives"
edition = "2021"
version = "0.1.0"

[lints]
workspace = true

[dependencies]
parity-scale-codec = { workspace = true, default-features = false, features = [
	"derive",
] }
scale-info = { workspace = true, default-features = false, features = [
	"derive",
] }

orml-oracle = { workspace = true }
orml-traits = { workspace = true }

# frame deps
frame-benchmarking = { workspace = true , default-features = false, optional = true }
frame-support = { workspace = true , default-features = false }
frame-system = { workspace = true , default-features = false }

sp-std = { workspace = true , default-features = false }
sp-core = { workspace = true , default-features = false }

[dev-dependencies]
sp-runtime = { workspace = true }

[features]
default = ["std"]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"orml-oracle/runtime-benchmarks",
#	"orml-traits/runtime-benchmarks",
]
std = [
	"parity-scale-codec/std",
	"orml-oracle/std",
#	"orml-traits/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
]
